@@ -8,6 +8,7 @@ public class Jvm4_Xss {
 		recursion();
 	}
 
+//	-Xmx20m -Xms20m -XX:NewRatio=4 -XX:SurvivorRatio=8 -Xss2m -XX:+PrintGCDetails -XX:+UseSerialGC -XX:+PrintCommandLineFlags
 	public static void main(String[] args) {
 		// -Xss1m
 		// -Xss4m
